# jinja2-livepreview

./: Dockerfile  Makefile  README.md  pyproject.toml  web.py
assets/js/: main.js
public/: index.html
