[tool.poetry]
name = "jinja2-livepreview"
version = "0.1.0"
description = "Fork of Jinja Live Preview to display HTML"
authors = ["Cedric L'homme <public@l-homme.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp-jinja2 = "^1.6"
project-runpy = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
